--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,59 +1,91 @@
-<div class="row">
-  <h2 class="col-md-2 mx-auto font-weight-bold">マイページ</h2>
+<div class="container" style="min-width: 300px;">
+
+  <div class="row">
+    <div class="col-md-10 mx-auto">
+
+      <div class="mt-4 mb-4 bg-light d-inline-block">
+        <h4 class="px-2 pt-2">マイページ</h4>
+      </div>
+
+      <div class="d-flex pb-2">
+        <h5 class="pt-2 mr-3" style="width: 90px;"><strong>登録情報</strong></h5>
+          <%= link_to "編集する", edit_customers_path, class: "btn btn-success px-4" %>
+      </div>
+
+      <div class="row">
+        <div class="col-12 col-lg-8">
+          <table class="table table-bordered mb-3">
+            <tbody>
+              <tr>
+                <td class="bg-light w-25">氏名</td>
+                <td>
+                  <%= current_customer.last_name %>
+                  <%= current_customer.first_name %>
+                </td>
+              </tr>
+              <tr>
+                <td class="bg-light">カナ</td>
+                <td>
+                  <%= current_customer.last_name_kana %>
+                  <%= current_customer.first_name_kana %>
+                </td>
+              </tr>
+              <tr>
+                <td class="bg-light">郵便番号</td>
+                <td>
+                  <%= current_customer.postal_code %>
+                </td>
+              </tr>
+              <tr>
+                <td class="bg-light">住所</td>
+                <td>
+                  <%= current_customer.address %>
+                </td>
+              </tr>
+              <tr>
+                <td class="bg-light">電話番号</td>
+                <td>
+                  <%= current_customer.telephone_number %>
+                </td>
+              </tr>
+              <tr>
+                <td class="bg-light text-nowrap">メールアドレス</td>
+                <td>
+                  <%= current_customer.email %>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+      <div class="d-flex pb-3">
+        <h5 class="pt-2 mr-3" style="width: 90px;"><strong>配送先</strong></h5>
+        <%= link_to "一覧を見る", deliveries_path, class: "btn btn-primary px-4" %>
+      </div>
+
+      <div class="d-flex">
+        <h5 class="pt-2 mr-3" style="width: 90px;"><strong>注文履歴</strong></h5>
+        <%= link_to "一覧を見る", orders_path, class: "btn btn-primary px-4" %>
+      </div>
+
+    </div>
+  </div>
+
 </div>
-<br>
- <br>
- <div class="row">
-   <div class="col-md-10">
-     <table bgcolor="#FFF" class="table table-bordered shadow">
-       <tr>
-         <th class="text-left bg-secondary text-light">氏名</th>
-         <td><%= current_customer.last_name %>　<%= current_customer.first_name %></td>
-       </tr>
-         <th class="text-left bg-secondary text-light">カナ</th>
-         <td><%= current_customer.last_name_kana %>　<%= current_customer.first_name_kana %></td>
-       </tr>
-       <tr>
-         <th class="text-left bg-secondary text-light">郵便番号</th>
-         <td><%= current_customer.postal_code %></td>
-       </tr>
-       <tr>
-         <th class="text-left bg-secondary text-light">住所</th>
-         <td><%= current_customer.address %></td>
-       </tr>
-       <tr>
-         <th class="text-left bg-secondary text-light">電話番号</th>
-         <td><%= current_customer.telephone_number %></td>
-       </tr>
-       <tr>
-         <th class="text-left bg-secondary text-light">メールアドレス</th>
-         <td><%= current_customer.email %></td>
-       </tr>
-     </table>
-   </div>
- </div>
- <div class="row">
-   <div class="col-md-10">
-    <table>
-      <tr>
-        <td><b class="form">登録情報</b></td>
-        <td><%= link_to "編集する", edit_customers_path, class: "btn btn-success" %></td>
-      </tr>
-      <tr>
-        <td><br></td>
-      </tr>
-     <tr>
-       <td><b class="form">配送先</b></td>
-       <td><%= link_to "一覧を見る", deliveries_path, class: "btn btn-primary" %></td>
-     </tr>
-     <tr>
-       <td><br></td>
-     </tr>
-     <tr>
-       <td><b class="form">注文履歴</b></td>
-       <td><%= link_to "一覧を見る", orders_path, class: "btn btn-primary" %></td>
-     </tr>
-    </table>
-   </div>
- </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
