--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,31 +1,35 @@
-<h1>会員一覧</h1>
-<table class='table table-hover table-inverse'>
-<thead>
-    <tr>
-        <th>会員ID</th>
-        <th>氏名</th>
-        <th>メールアドレス</th>
-        <th>ステータス</th>
-        <th colspan="3"></th>
-    </tr>
-</thead>
-<tbody>
- <% @customers.each do |customer| %>
-  <tr>
-      <td><%= customer.id %></td>
+<div class="container">
+  <div class="row badge badge-light ml-2 mt-3">
+    <h4>会員一覧</h4>
+  </div>
+  <div class="row mx-auto pb-4">
+    <table class="table w-75 mx-auto">
+        <tr>
+            <th>会員ID</th>
+            <th>氏名</th>
+            <th>メールアドレス</th>
+            <th>ステータス</th>
+        </tr>
+    <% @customers.each do |customer|%>
+    　　<tr>
+    　　    <td><%= customer.id %></td>
+    　　    <td><%= link_to admin_customer_path(customer.id) do %>
+              <%= customer.last_name %>
+              <%= customer.first_name %><% end %>
+          </td>
+          <td><%= customer.email %></td>
+        <% if customer.is_deleted?%>
+    　　    <td class="text-danger">退会</td>
+    　　    <%else%>
+    　　    <td class="text-success">有効</td>
+    　　    <%end%>
+    　　</tr>
+    <% end %>
+    </table>
+   </div>
+     <div class="row justify-content-center">
+     
+     </div>
+</div>
 
-      <td><%= link_to admin_customer_path(customer.id) do %>
-          <%= customer.last_name %>
-          <%= customer.first_name %><% end %>
-      </td>
 
-      <td><%= customer.email %></td>
-      <% if customer.is_deleted? %>
-        <td class="false">退会済</td>
-      <% else %>
-        <td class="true">有効</td>
-      <% end %>
-  </tr>
-  <% end %>
-</tbody>
-</table>
