--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,60 +1,64 @@
-<div class="row">
-  <h2 class="col-md-3 mx-auto font-weight-bold"><%= @customers.last_name %><%= @customers.first_name %>さんの会員情報</h2>
-</div>
-<br>
- <br>
- <div class="row">
-   <div class="col-md-10">
-     <table bgcolor="#FFF" class="table tablebordered shadnow">
-       <tr>
-         <th class="text-left">会員ID</th>
-         <td><%= @customers.id %></td>
-       </tr>
-       <tr>
-         <th class"text-left bg-secondary text-light">氏名</th>
-         <td><%= @customers.last_name %><%= @customers.first_name %></td>
-       </tr>
-        <tr>
-         <th class"text-left bg-secondary text-light">フリガナ</th>
-         <td><%= @customers.last_name_kana %><%= @customers.first_name_kana %></td>
-       </tr>
-       <tr>
-         <th class"text-left bg-secondary text-light">郵便番号</th>
-         <td><%= @customers.postal_code %></td>
-       </tr>
-        <tr>
-         <th class"text-left bg-secondary text-light">住所</th>
-         <td><%= @customers.address %></td>
-       </tr>
-       <tr>
-         <th class"text-left bg-secondary text-light">電話番号</th>
-         <td><%= @customers.telephone_number %></td>
-       </tr>
-       <tr>
-         <th class"text-left bg-secondary text-light">メールアドレス</th>
-         <td><%= @customers.email %></td>
-       </tr>
-       <tr>
-         <th class"text-left bg-secondary text-light">会員ステータス</th>
-         <td><%= @customers.is_deleted ? "無効" : "有効" %></td>
-       </tr>
-     </table>
-   </div>
- </div>
-<div class="row">
-  <div class="col-md-10">
-    <table>
-      <tr>
-        <td><b class="form">登録情報</b></td>
-        <td><%= link_to "編集する", edit_admin_customer_path(@customers.id), class: "btn btn-success" %></td>
-      </tr>
-      <tr>
-        <td><br></td>
-      </tr>
-      <tr>
-        <td><b class="form">注文情報</b></td>
-        <td><%= link_to "履歴一覧を見る", admin_order_path(@customers.id), class: "btn btn-primary" %></td>
-      </tr>
-    </table>
+<div class="container">
+  <div class="row">
+    <div class="col-6 offset-3">
+      <h4 class="customer-show">
+        <%= @customers.last_name %><%= @customers.first_name %>
+        さんの会員情報
+      </h4>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-6 offset-1">
+      <table class="table table-borderless">
+        <tbody>
+          <tr>
+            <td class= "text-center">会員ID</td>
+            <td class= "text-center"><%= @customers.id %></td>
+          </tr>
+          <tr>
+            <td class= "text-center">氏名</td>
+            <td class= "text-center"><%= @customers.last_name %><%= @customers.first_name %></td>
+          </tr>
+          <tr>
+            <td class= "text-center">フリガナ</td>
+            <td class= "text-center"><%= @customers.last_name_kana %><%= @customers.first_name_kana %></td>
+          </tr>
+          <tr>
+            <td class= "text-center">郵便番号</td>
+            <td class= "text-center"><%= @customers.postal_code %></td>
+          </tr>
+          <tr>
+            <td class= "text-center">住所</td>
+            <td class= "text-center"><%= @customers.address %></td>
+          </tr>
+          <tr>
+            <td class= "text-center">電話番号</td>
+            <td class= "text-center"><%= @customers.telephone_number %></td>
+          </tr>
+          <tr>
+            <td class= "text-center">メールアドレス</td>
+            <td class= "text-center"><%= @customers.email  %></td>
+          </tr>
+          <tr>
+            <td class= "text-center">会員ステータス</td>
+            <td class= "text-center">
+              <%= @customers.is_deleted ? "無効" : "有効" %>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-2 offset-3">
+      <%= link_to '編集する', edit_admin_customer_path(@customers.id), class: 'btn btn-success' %>
+    </div>
+    <div class="col-3">
+      <%= link_to '注文履歴一覧を見る', admin_order_path(@customers.id), class: 'btn btn-primary' %>
+    </div>
   </div>
 </div>
+
+
+
+
