--- a/app/views/customers/passwords/new.html.erb
+++ b/app/views/customers/passwords/new.html.erb
@@ -5,7 +5,7 @@
 <div class="row">
 <div class="mx-auto">
  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
- <%= render "customers/shared/error_messages", resource: resource %>
+ <%= render "customers/shared/error_messages", resource: resource %>-->-->
 <table class='table table-borderless'>
   <tr>
     <th><%= f.label :メールアドレスを入力 %></th>
