--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -7,7 +7,7 @@
        <h4 class="genre-title">商品詳細</h4>
       </div>
       <!--画像の設定-->
-      <div class="product">
+      <div class="product_body">
         <div class="product_image">
           <%= attachment_image_tag @product, :image,fallback: "no_image.jpg", size: "350x300"%>
         </div>
