--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -14,6 +14,12 @@
   justify-content: center;
   align-items: center;
 }
+.product_body{
+  display: flex;
+  margin: 20px auto;
+  justify-content: center;
+  align-items: center;
+}
 
 .product_image {
   margin: 0;
@@ -22,6 +28,7 @@
 
 .product_details {
   margin-left: 50px;
+  margin-top: 100px;
   padding: 0;
 }
 
@@ -45,3 +52,4 @@
 .space-text{
   width: 400px;
 }
+
