--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,9 +3,9 @@
     <div class='row'>
       <div class='mx-auto'>
         <p>Nagano Cake</p>
-        <i class="fab fa-facebook-square"></i>
-        <i class="fab fa-instagram-square"></i>
-        <i class="fab fa-twitter-square"></i>
+        <i class="fab fa-facebook-square fa-2x"></i>
+        <i class="fab fa-instagram-square fa-2x"></i>
+        <i class="fab fa-twitter-square fa-2x"></i>
       </div>
     </div>
   </div>
