--- a/app/views/public/products/show.html.erb
+++ b/app/views/public/products/show.html.erb
@@ -1,20 +1,22 @@
-<div class="contatiner">
+<div class="container">
   <div class="row">
     <div class="col-sm-10 col-md- col-lg-7 px- px-sm-0 mx-auto">
-      <div class="product">
+      <div class="product_body">
         <a class="product_image">
           <%= attachment_image_tag @product, :image,fallback: "no_image.jpg", size: "350x300"%>
         </a>
         <div class="product_details">
           <h3><%= @product.name %></h3>
+          <p></p>
           <p><%= @product.introduction %></p>
           <p><span>¥<%= @product.add_tax_price.to_s(:delimited) %></span>(税込)</p>
           <div class="order">
 
             <%= form_with(model: @cart_product, url: cart_products_path, local: true) do |f| %>
-            <%= f.select :amount, [*1..100], { include_blank: '個数選択'}, { class: 'form-control' , required: true } %>
+            <div style = "margin-top: 20px"><%= f.select :amount, [*1..100], { include_blank: '個数選択'}, { class: 'form-control' , required: true } %></div>
             <%= f.hidden_field :product_id, value: @product.id%>
-            <%= f.submit 'カートに入れる', class: 'btn btn-success' %>
+            <div style = "margin-top: 40px"><%= f.submit 'カートに入れる', class: 'btn btn-success' %></div>
+            
             <% end %>
 
           </div>
