--- a/app/views/public/orders/_confirmination_table.html.erb
+++ b/app/views/public/orders/_confirmination_table.html.erb
@@ -1,8 +1,8 @@
 <% @sum = 0 %>
 <% @cart_products.each do |cart_product| %>
-  <tr>
+  <tr class="text-center">
     <td>
-      <%= attachment_image_tag cart_product.product, :image, :fill, 100, 100, class: "product_image", fallback: "no_image.jpg" %>
+      <%= attachment_image_tag cart_product.product, :image, size: "70x70", class: "product_image", fallback: "no_image.jpg" %>
       <%= cart_product.product.name %>
     </td>
     <td><%= (cart_product.product.price * 1.1).to_i.to_s(:delimited) %> 円</td>
