--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -5,7 +5,7 @@
       <!-- 注文情報のテーブル -->
       <table class="table table-bordered">
         <thead>
-          <tr>
+          <tr class= "text-center">
           <th>商品名</th>
           <th>単価(税込)</th>
           <th>数量</th>
