--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,62 +1,68 @@
- <div class = "container my-5">
-    <div class="row">
-      <div class="col offset-2">
-        <h3 class="">会員情報編集</h3>
-      </div>
-    </div>
-    <div class='row offset-1'>
-      <div class="col-xs-offset-1 col-xs-8">
-       <%= form_with model: current_customer, url: customers_path, local: true do |f| %>
-          <table class = 'table inin'>
-          <tr>
-            <td><%= f.label :氏名 %></td>
-            <td>
-              <%= f.text_field :last_name, :size => "20*30", class: "border border-dark rounded" %>
-              <%= f.text_field :first_name, :size => "20*30", class: "border border-dark rounded" %>
-            </td>
-          </tr>
-          <tr>
-            <td><%= f.label :カナ %></td>
-            <td>
-              <%= f.text_field :last_name_kana, :size => "20*30", class: "border border-dark rounded" %>
-              <%= f.text_field :first_name_kana, :size => "20*30", class: "border border-dark rounded" %>
-            </td>
-          </tr>
-          <tr>
-            <td><%= f.label :郵便番号 %></td>
-            <td><%= f.text_field :postal_code, :size => "20*30", class: "border border-dark rounded" %></td>
-          </tr>
-          <tr>
-            <td><%= f.label :住所 %></td>
-            <td><%= f.text_field :address, :size => "60*30", class: "border border-dark rounded" %></td>
-          </tr>
-          <tr>
-            <td><%= f.label :電話番号 %></td>
-            <td><%= f.text_field :telephone_number, :size => "20*30", class: "border border-dark rounded" %></td>
-          </tr>
-          <tr>
-            <td><%= f.label :メールアドレス %></td>
-            <td><%= f.text_field :email, :size => "20*30", class: "border border-dark rounded" %></td>
-          </tr>
-        </table>
-        <!--各リンク先のパスを入れる-->
-      </div>
-    </div>
-        
-          <div class="row">
-            <div class="col-sm-2 offset-3">
-              <%= f.submit '編集内容を保存', class: 'btn btn-success' %>
-            </div>
-            <div class="col-sm-2 offset-1">
-              <%= link_to '退会する', customers_unsubscribe_path ,class: 'btn btn-danger' %>
-              <% end %>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
+<div class='container'>
+  <div class='row'>
+    <div class="col-1"></div>
+    <h2>会員情報編集</h2>
   </div>
+
+  <div class="row">
+   <%= form_with model: current_customer, url: customers_path, local: true do |f| %>
+    <table>
+      <tr>
+        <div class="form-group">
+          <th><%= f.label :氏名 %></th>
+          <td><%= f.text_field :last_name, class: "form-control name" %></td>
+          <td><%= f.text_field :first_name, class: "form-control name" %></td>
+        </div>
+      </tr>
+      <tr>
+        <div class="form-group">
+          <th><%= f.label :フリガナ %></th>
+          <td><%= f.text_field :last_name_kana, class: "form-control name" %></td>
+          <td><%= f.text_field :first_name_kana, class: "form-control name" %></td>
+      </div>
+      </tr>
+      <tr>
+        <div class="form-group">
+          <th><%= f.label :郵便番号 %></th>
+          <td><%= f.text_field :postal_code, class: "form-control name" %></td>
+        </div>
+      </tr>
+      <tr>
+        <div class="form-group">
+          <th><%= f.label :住所 %></th>
+          <td colspan="2"><%= f.text_field :address, class: "form-control name" %></td>
+        </div>
+      </tr>
+      <tr>
+        <div class="form-group">
+          <th><%= f.label :電話番号 %></th>
+          <td><%= f.text_field :telephone_number, class: "form-control introduction" %></td>
+        </div>
+      </tr>
+      <tr>
+        <div class="form-group">
+          <th><%= f.label :メールアドレス %></th>
+          <td><%= f.text_field :email, class: "form-control introduction" %></td>
+          <td></td>
+        </div>
+      </tr>
+      <tr>
+        <div class="form-group">
+          <th></th>
+          <td><%= f.submit "編集内容を保存",class: "btn btn-success" %></td>
+          <td><%= link_to '退会する', customers_unsubscribe_path ,class: 'btn btn-danger' %></td>
+        </div>
+      </tr>
+    </table>
+  <% end %>
+  </div>
+
+
+
+
+
+
+
 
 
 
