--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-warning p-1">
     <div class="container">
-      <a class="navbar-brand" href="/"><span>LOGO</span></a> 　　<!--後でLOGO画像入れます-->
+      <a class="navbar-brand" href="/"><span style="font-size: 30px">NaganoCake</span></a> 　　<!--後でLOGO画像入れます-->
 
       <nav>
         <ul class="nav navbar-nav navbar-right ml-auto bg p-4">
