--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
   </head>
 <!--背景色を変更したい場合は下記のカラーコードを変更して下さい-->
-  <body style= "background-color: #CEF9DC">
+  <body style= "background-color: #fff">
     <%= render 'layouts/header' %>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <%= yield %>
