--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -56,7 +56,7 @@
         <%= f.hidden_field :delivery_name, :value => @order.delivery_name %>
         <%= f.hidden_field :total_payment, :value => @total %>
         <%= f.hidden_field :delivery_fee, :value => @delivery_fee %>
-        <%= f.submit '注文を確定する', class: 'btn btn-success text-center' %>
+        <%= f.submit '注文を確定する', class: 'btn btn-success text-center', "data-confirm" => "注文を確定しますか？" %>
       <% end %>
       </div>
     </div>
