--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -34,7 +34,7 @@
 }
 
 .new-product-title{
-  margin-top: 20px;
+  margin: 40px 0 30px 0;
   font-weight: bold;
 }
 
@@ -73,4 +73,16 @@
       -ms-flex-align: center;
       -webkit-align-items: center;
       align-items: center;
+    }
+    
+    .fa-facebook-square{
+      color: #315096;
+    }
+    
+    .fa-instagram-square{
+      color: #e1306c;
+    }
+    
+    .fa-twitter-square{
+      color: #55acee;
     }
