--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,3 +1,13 @@
+<% if @genre.errors.any? %>
+  <div class="alert alert-warning">
+    <ul>
+      <% @genre.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <div style= "margin: 30px 0 30px 90px">
   <p class="genre-title">ジャンル一覧・追加</p>
 </div>
