--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -8,42 +8,47 @@
   </div>
 <% end %>
 
+<div class="container">
+  <div class="row">
+    <div class="col-md-12" style="margin-top: 30px;">
+     
+     <div style= "margin: 20px 0 10px">
+       <h4 class="genre-title">ジャンル一覧</h4>
+     </div>
 
-<div style= "margin: 30px 0 30px 90px">
-  <p class="genre-title">ジャンル一覧・追加</p>
-</div>
-
-
-<%= form_with model: @genre,:url => {:action => :create}, local: true do |f| %>
-<div style= "margin: 30px 0 30px 180px">
-  <div class="form-content">
-    <p>ジャンル名</p>
-    <div class="form-group">
-      <%= f.text_field :name %>
-    </div>
-    <div class="form-group">
-     <%= f.submit '新規登録',class: 'btn btn-success' %>
-    </div>
-  </div>
-</div>
-<% end %>
+    <%= form_with model: @genre,:url => {:action => :create}, local: true do |f| %>
+      <div style= "margin: 30px 0 30px 180px">
+        <div class="form-content">
+          <p>ジャンル名</p>
+            <div class="form-group">
+              <%= f.text_field :name %>
+            </div>
+            <div class="form-group">
+              <%= f.submit '新規登録',class: 'btn btn-success' %>
+            </div>
+        </div>
+      </div>
+    <% end %>
 
 <!--ジャンル作成したら表示される部分-->
-<div class='col-md-4 offset-md-1'>
-  <table class='table table-hover table-inverse'>
-    <thead>
-      <tr>
-        <th>ジャンル</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @genres.each do |genre| %>
-      <tr>
-        <td><%= genre.name %></td>
-        <td><%= link_to "編集する", "/admin/genres/#{genre.id}/edit",class: 'btn btn-success' %></td>
-      </tr>
-      <% end %>
-    </tbody>
-  </table>
+    <div class='col-md-4 offset-md-1'>
+      <table class='table table-hover table-inverse'>
+        <thead>
+          <tr>
+            <th>ジャンル</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+         <% @genres.each do |genre| %>
+          <tr>
+            <td><%= genre.name %></td>
+            <td><%= link_to "編集する", "/admin/genres/#{genre.id}/edit",class: 'btn btn-success' %></td>
+          </tr>
+         <% end %>
+        </tbody>
+      </table>
+    </div>
+    </div>
+</div>
 </div>
