--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,3 +1,13 @@
+<% if @product.errors.any? %>
+  <div class="alert alert-warning">
+    <ul>
+      <% @product.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <p class="genre-title">商品編集</p>
 
 <%= form_with model: @product,:url => {:controller => :products, :action => :update}, local: true do |f| %>
