--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,10 +2,13 @@
   <div class='container mt-5'>
     <div class='row'>
       <div class='mx-auto'>
+        <div style="text-align: center">
         <p>Nagano Cake</p>
-        <i class="fab fa-facebook-square fa-2x"></i>
-        <i class="fab fa-instagram-square fa-2x"></i>
-        <i class="fab fa-twitter-square fa-2x"></i>
+        <p>営業時間9:00-19:00<span style="margin-left: 30px">定休日：火曜日</span></p>
+        <i class="fab fa-facebook-square fa-2x", style="margin: 10px 10px 0 0"></i>
+        <i class="fab fa-instagram-square fa-2x", style="margin: 10px 10px 0 0"></i>
+        <i class="fab fa-twitter-square fa-2x", style="margin: 10px 10px 0 0"></i>
+        </div>
       </div>
     </div>
   </div>
