--- a/app/views/public/cart_products/index.html.erb
+++ b/app/views/public/cart_products/index.html.erb
@@ -28,15 +28,15 @@
         <% @cart_products.each do |cart_product| %>
           <tr>
             <th class="text-center"><%= attachment_image_tag cart_product.product, :image, size: "50x40", fallback: "no_image.jpg" %><%= cart_product.product.name %></th>
-            <th class="text-center"><%= (cart_product.product.price * 1.1).to_i.to_s(:delimited)  %>円</th>
+            <th class="text-center"><%= (cart_product.product.price * 1.08).to_i.to_s(:delimited)  %>円</th>
             <th class="text-center">
              <%= form_with url: cart_product_path(cart_product.id), model: cart_product, local: true do |f| %>
                 <%= f.select :amount, [1,2,3,4,5,6,7,8,9,10], class: 'form-control' %>
                 <%= f.submit "変更", class: "btn-sm btn-success" %>
               <% end %>
             </th>
-            <th class="text-center"><%= (cart_product.product.price * cart_product.amount * 1.1).to_i.to_s(:delimited) %>円</th>
-            <% @sum += (cart_product.product.price * cart_product.amount * 1.1).to_i  %>
+            <th class="text-center"><%= (cart_product.product.price * cart_product.amount * 1.08).to_i.to_s(:delimited) %>円</th>
+            <% @sum += (cart_product.product.price * cart_product.amount * 1.08 ).to_i  %>
             <th class="text-center"><%= link_to "削除する", cart_product_path(cart_product.id), method: :delete, class: "btn btn-danger" %></th>
           </tr>
 
@@ -48,7 +48,7 @@
 
   <div class = "row mt-5" style = "height:100px">
     <div class = "col-2">
-     <%= link_to "買い物を続ける", root_path, class:"btn btn-primary" %>
+     <%= link_to "買い物を続ける", products_path, class:"btn btn-primary" %>
 
     </div>
     <div class = "col-4 offset-4">
