--- a/app/views/public/products/index.html.erb
+++ b/app/views/public/products/index.html.erb
@@ -5,11 +5,11 @@
       <h4>商品一覧(全<%= @products.count %>件)</h4>
       <div class="row">
           <% @products.each do |product| %>
-            <div class="col-md-3 text-center">
+            <div class="col-md-3 text-center" style="margin-top: 30px">
               <!--画像のクリックで詳細ページに移動できます-->
               <div class="product_image">
               <%= link_to product_path(product) do %>
-              <%= attachment_image_tag product, :image,fallback: "no_image.jpg", size: "255x200"%>
+              <%= attachment_image_tag product, :image,fallback: "no_image.jpg", size: "255x200", style: "border-radius:20px" %>
               <% end %>
 
               <div><%= product.name %></div>
