--- a/app/views/public/products/show.html.erb
+++ b/app/views/public/products/show.html.erb
@@ -3,7 +3,7 @@
     <div class="col-sm-10 col-md- col-lg-7 px- px-sm-0 mx-auto">
       <div class="product_body">
         <a class="product_image">
-          <%= attachment_image_tag @product, :image,fallback: "no_image.jpg", size: "350x300"%>
+          <%= attachment_image_tag @product, :image,fallback: "no_image.jpg", size: "350x300", style: "border-radius:20px"%>
         </a>
         <div class="product_details">
           <h3><%= @product.name %></h3>
