--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -4,6 +4,8 @@
   <div class="row">
     <div class="col-sm-8">
       <h4 style="margin-top: 20px;">注文履歴詳細</h4>
+
+      <!-- 注文情報のテーブル -->
       <table class="table table-borderless">
         <tr>
           <th>購入者</th>
@@ -43,6 +45,8 @@
   </div>
   <div class="row">
     <div class="col-sm-9">
+
+      <!-- 注文した商品情報のテーブル -->
       <table class="table table-borderless">
         <thead>
           <tr>
@@ -74,6 +78,8 @@
       </table>
     </div>
     <div class="col-sm-3 mt-5">
+
+      <!-- 各金額を表示 -->
       <table class="table table-borderless">
         <% @total = 0 %>
           <tr>
