--- a/app/views/layouts/_admin_header.html.erb
+++ b/app/views/layouts/_admin_header.html.erb
@@ -5,7 +5,7 @@
   <%= link_to "会員一覧", admin_customers_path, class: 'text-light' %>
 </li>
 <li style="padding: 10px; margin-bottom: 10px; margin-right: 20px; border: 1px solid #fff; border-radius: 10px;">
-  <%= link_to "注文履歴一覧", admin_top_path, class: 'text-light' %>
+  <%= link_to "注文履歴一覧", admin_root_path, class: 'text-light' %>
 </li>
 <li style="padding: 10px; margin-bottom: 10px; margin-right: 20px; border: 1px solid #fff; border-radius: 10px;">
   <%= link_to ' ジャンル一覧', admin_genres_path, class: 'text-light'  %>
