--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,11 +1,12 @@
 <!-- 注文履歴詳細ページ -->
-
 <div class="container">
   <div class="row">
     <div class="col-2">
       <h4 class="customer-index">注文履歴一覧</h4>
     </div>
   </div>
+
+  <!-- 注文確定時の情報 -->
   <div class="row">
     <div class="col-7">
       <p>注文情報<p>
@@ -13,7 +14,7 @@
        <tbody>
           <tr>
             <td class="table-secondary">注文日</td>
-            <td><%= @order.created_at %></td>
+            <td><%= @order.created_at.strftime('%Y/%m/%d %H:%M:%S') %></td>
           </tr>
           <tr>
             <td class="table-secondary">配送先</td>
@@ -33,6 +34,8 @@
         </tbody>
       </table>
     </div>
+
+    <!-- 金額の情報 -->
     <div class="col-3">
       <p>請求情報<p>
       <table class="table table-bordered">
@@ -53,6 +56,8 @@
       </table>
     </div>
   </div>
+
+  <!-- 注文商品と金額 -->
   <div class="row">
     <div class="col-8">
       <p>注文内容<p>
