--- a/app/assets/stylesheets/admin/orders.scss
+++ b/app/assets/stylesheets/admin/orders.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the admin/orders controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.genre-title, {
+  border: solid #EEEEEE;
+  background-color: #EEEEEE;
+  width: 200px;
+  text-align: center;
+}
