--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-10" style="margin-top: 30px;">
-      <h4>注文履歴一覧</h4>
+      <h4 class="genre-title">注文履歴一覧</h4>
       <div class="table" style="margin-top:20px;">
         <!-- 注文一覧のテーブル -->
 
