--- a/app/views/public/cart_products/index.html.erb
+++ b/app/views/public/cart_products/index.html.erb
@@ -4,6 +4,8 @@
       <h4>ショッピングカート</h4>
     </div>
   </div>
+
+  <!-- カートの中身を空にする -->
   <div class = "row" style = "height:50px">
     <div class = "offset-10">
       <%= link_to 'カートを空にする', cart_products_destroy_all_path, class: 'btn-sm btn-danger', method: :delete %>
@@ -11,8 +13,9 @@
   </div>
 
   <div class = "row">
-    <table class = "table table-bordered" >
 
+    <!-- 選択した商品のテーブル -->
+    <table class = "table table-bordered" >
       <thead>
         <tr>
           <th class="text-center">商品名</th>
@@ -27,35 +30,46 @@
         <% @sum = 0 %>
         <% @cart_products.each do |cart_product| %>
           <tr>
-            <th class="text-center"><%= attachment_image_tag cart_product.product, :image, size: "50x40", fallback: "no_image.jpg" %><%= cart_product.product.name %></th>
-            <th class="text-center"><%= (cart_product.product.price * 1.08).to_i.to_s(:delimited)  %>円</th>
+            <th class="text-center">
+              <%= attachment_image_tag cart_product.product, :image, size: "50x40", fallback: "no_image.jpg" %><%= cart_product.product.name %>
+            </th>
+            <th class="text-center">
+              <%= (cart_product.product.price * 1.1).to_i.to_s(:delimited)  %>円
+            </th>
             <th class="text-center">
              <%= form_with url: cart_product_path(cart_product.id), model: cart_product, local: true do |f| %>
-                <%= f.select :amount, [1,2,3,4,5,6,7,8,9,10], class: 'form-control' %>
+                <%= f.select :amount, [*1..100], class: 'form-control' %>
                 <%= f.submit "変更", class: "btn-sm btn-success" %>
               <% end %>
             </th>
-            <th class="text-center"><%= (cart_product.product.price * cart_product.amount * 1.08).to_i.to_s(:delimited) %>円</th>
-            <% @sum += (cart_product.product.price * cart_product.amount * 1.08 ).to_i  %>
-            <th class="text-center"><%= link_to "削除する", cart_product_path(cart_product.id), method: :delete, class: "btn btn-danger" %></th>
+            <th class="text-center">
+              <%= (cart_product.product.price * cart_product.amount * 1.1).to_i.to_s(:delimited) %> 円
+            </th>
+            <% @sum += (cart_product.product.price * cart_product.amount * 1.1).to_i  %>
+            <th class="text-center">
+              <%= link_to "削除する", cart_product_path(cart_product.id), method: :delete, class: "btn btn-danger" %>
+            </th>
           </tr>
-
         <% end %>
       </tbody>
-
     </table>
   </div>
 
   <div class = "row mt-5" style = "height:100px">
+    <!-- 買い物を続けるボタン -->
     <div class = "col-2">
      <%= link_to "買い物を続ける", products_path, class:"btn btn-primary" %>
-
     </div>
+
+    <!-- 商品の合計金額 -->
     <div class = "col-4 offset-4">
       <table class="table table-bordered">
         <tbody>
           <tr>
-            <th class="text-center">合計</th><th class = "text-center"><%= @sum.to_s(:delimited) %>円</th>
+            <th class="text-center">合計</th>
+            <th class = "text-center">
+              <%= @sum.to_s(:delimited) %> 円
+            </th>
           </tr>
         </tbody>
       </table>
@@ -63,19 +77,10 @@
   </div>
 
   <div class = "row">
+
+    <!-- 注文情報入力画面へのリンク -->
     <div class = "mx-auto">
       <%= link_to "情報入力に進む", new_order_path, class:"btn btn-success" %>
     </div>
   </div>
-
 </div>
-
-
-
-
-
-
-
-
-
-
