--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,14 +1,17 @@
 <div class="container">
-  <div class="row badge badge-light ml-2 mt-3">
-    <h4>会員一覧</h4>
-  </div>
-  <div class="row mx-auto pb-4">
-    <table class="table w-75 mx-auto">
+  <div class="row">
+    <div class="col-md-12" style="margin-top: 10px;">
+      <div style= "margin: 20px 0 10px">
+        <h4 class="genre-title">会員一覧</h4>
+      </div>
+    
+    <div class="row mx-auto pb-4">
+      <table class="table w-75 mx-auto">
         <tr>
-            <th>会員ID</th>
-            <th>氏名</th>
-            <th>メールアドレス</th>
-            <th>ステータス</th>
+          <th>会員ID</th>
+          <th>氏名</th>
+          <th>メールアドレス</th>
+          <th>ステータス</th>
         </tr>
     <% @customers.each do |customer|%>
     　　<tr>
@@ -26,10 +29,10 @@
     　　</tr>
     <% end %>
     </table>
-   </div>
-     <div class="row justify-content-center">
-     
-     </div>
+    </div>
+      <div class="row justify-content-center">
+      </div>
+    </div>
+  </div>
 </div>
-
 
