--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -8,45 +8,55 @@
   </div>
 <% end %>
 
-<p class="genre-title">商品編集</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12" style="margin-top: 10px;">
+      
+      <div style= "margin: 20px 0 10px">
+        <h4 class="genre-title">商品編集</h4>
+      </div>
 
-<%= form_with model: @product,:url => {:controller => :products, :action => :update}, local: true do |f| %>
-<div class='col-md-8 offset-md-1'>
-  <table class='table table-hover table-inverse'>
-    <tbody>
-      <tr>
-        <td>商品画像</td>
-        <td><%= f.attachment_field :image %></td>
-      </tr>
-      <tr>
-        <td>商品名</td>
-        <td><%= f.text_field :name,size: "40" %></td>
-      </tr>
-      <tr>
-        <td>商品説明</td>
-        <td><%= f.text_area :introduction,size: "45x5" %></td>
-      </tr>
-      <tr>
-        <td>ジャンル</td>
-        <td><%= f.collection_select :genre_id, Genre.all, :id, :name %></td>
-      </tr>
-      <tr>
-        <td>税抜価格</td>
-        <td><%= f.text_field :price,size: "40" %>円</td>
-      </tr>
-      <tr>
-        <td>販売ステータス</td>
-        <td>
-           <%= f.radio_button :sales_status, '0', checked: true %>
-           <%= f.label :sales_status, "販売中", {value: :sales_status} %>
-           <%= f.radio_button :sales_status, '1' %>
-           <%= f.label :sales_status, "販売停止中", {value: :sales_status} %>
-        </td>
-      </tr>
-      <tr>
-        <td><%= f.submit '変更を保存',class: 'btn btn-success' %></td>
-      </tr>
-    </tbody>
-  </table>
+      <%= form_with model: @product,:url => {:controller => :products, :action => :update}, local: true do |f| %>
+      <div class='col-md-8 offset-md-1'>
+        <table class='table table-hover table-inverse'>
+          <tbody>
+            <tr>
+              <td>商品画像</td>
+              <td><%= f.attachment_field :image %></td>
+            </tr>
+            <tr>
+              <td>商品名</td>
+              <td><%= f.text_field :name,size: "40" %></td>
+            </tr>
+            <tr>
+              <td>商品説明</td>
+              <td><%= f.text_area :introduction,size: "45x5" %></td>
+            </tr>
+            <tr>
+              <td>ジャンル</td>
+              <td><%= f.collection_select :genre_id, Genre.all, :id, :name %></td>
+            </tr>
+            <tr>
+              <td>税抜価格</td>
+              <td><%= f.text_field :price,size: "40" %>円</td>
+            </tr>
+            <tr>
+              <td>販売ステータス</td>
+              <td>
+                <%= f.radio_button :sales_status, '0', checked: true %>
+                <%= f.label :sales_status, "販売中", {value: :sales_status} %>
+                <%= f.radio_button :sales_status, '1' %>
+                <%= f.label :sales_status, "販売停止中", {value: :sales_status} %>
+              </td>
+            </tr>
+            <tr>
+              <td><%= f.submit '変更を保存',class: 'btn btn-success' %></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <% end %>
+      
+    </div>
+  </div>
 </div>
-<% end %>
