--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
   <div class="row">
+    <div class="col-sm-8 mx-auto text-center">
+      <h1 style="font-size: 50px; margin-top: 25px;">About</h1>
+    </div>
     <div class="px-3 mx-auto text-center">
-      <h1 class="heading" style="font-size: 50px; margin-top: 25px;">About</h1>
       <p class="introduction" style="font-size: 24px; margin-top: 30px;">
         ながのCAKEは全国発送可能なケーキ屋さんです。<br>
         お子様からお年寄りの方までお召し上がりいただけるよう、<br>
