--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,3 +1,12 @@
+<% if @customer.errors.any? %>
+  <div class="alert alert-warning">
+   <ul>
+    <% @customer.errors.full_messages.each do |add_error_sample| %>
+    <li><%= add_error_sample %></li>
+   </ul>
+<% end %>
+<% end %>
+</div>
 <div class="row">
 <h4 class="col-md-3 mx-auto font-weight-bold"><%= @customer.last_name %><%= @customer.first_name %>さんの会員編集</h4>
 </div>
@@ -6,9 +15,8 @@
 
 <div class="row">
  <div class="col-md-10 mx-auto">
-  <%= form_with model: @customer, url: admin_customer_path, method: :patch, local: true do |f| %>
+    <%= form_with model: @customer, url: admin_customer_path, method: :patch, local: true do |f| %>
   <table class="table table-borderless table-sm">
-
    <tbody>
     <tr>
      <th>
@@ -102,6 +110,6 @@
    <% end %>
  </div>
 </div>
-　
-　
+
+
 
