--- a/app/views/public/cart_products/index.html.erb
+++ b/app/views/public/cart_products/index.html.erb
@@ -58,7 +58,7 @@
   <div class = "row mt-5" style = "height:100px">
     <!-- 買い物を続けるボタン -->
     <div class = "col-2">
-     <%= link_to "買い物を続ける", products_path, class:"btn btn-primary" %>
+     <%= link_to "買い物を続ける", root_path, class:"btn btn-primary" %>
     </div>
 
     <!-- 商品の合計金額 -->
