--- a/app/views/public/orders/_order_logs.html.erb
+++ b/app/views/public/orders/_order_logs.html.erb
@@ -13,7 +13,7 @@
   <% orders.each do |order| %>
     <tr>
       <td>
-        <%= order.created_at %>
+        <%= order.created_at.strftime('%Y/%m/%d %H:%M:%S') %>
       </td>
       <td>
         〒<%= order.delivery_postal_code %><br>
