--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -2,14 +2,13 @@
 <div class="container">
   <div class="row">
     <div class="col-2">
-      <h4 class="customer-index">注文履歴一覧</h4>
+      <h4 class="customer-index">注文情報</h4>
     </div>
   </div>
 
   <!-- 注文確定時の情報 -->
   <div class="row">
     <div class="col-7">
-      <p>注文情報<p>
       <table class="table table-bordered">
        <tbody>
           <tr>
